--- a/hosting-server-setup.html
+++ b/hosting-server-setup.html
@@ -7,6 +7,7 @@
     <title>Hosting & Server Setup - ApplyLogics</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
@@ -15,7 +16,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="index.html" class="logo-link">
-                    <span class="logo-text">ApplyLogics</span>
+                    <img src="favicon.png" alt="ApplyLogics Logo" class="logo-icon"> <span class="logo-text">ApplyLogics</span>
                 </a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">Menu</button>
@@ -182,6 +183,12 @@
                         <li><a href="business-automation.html">Business Automation</a></li>
                         <li><a href="technical-infrastructure.html">Technical Infrastructure</a></li>
                         <li><a href="ongoing-partnership.html">Ongoing Partnership</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Our Brands</h4>
+                    <ul>
+                        <li><a href="https://ogtheproject.com" target="_blank" rel="noopener noreferrer">OG The Project</a></li>
                     </ul>
                 </div>
             </div>
