--- a/maintenance-support.html
+++ b/maintenance-support.html
@@ -7,6 +7,7 @@
     <title>Maintenance & Support - ApplyLogics</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800&family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <!-- Skip Navigation Link -->
