feat: add Terms of Service, Cookie Banner, and footer enhancements
- Create terms.html with standard legal sections and cyber styling
- Implement Cookie Banner with Accept/Decline logic and glassmorphism design
- Update all page footers:
  - Make 'ApplyLogics' logo a clickable link to homepage
  - Add 'Terms of Service' link to copyright section
  - Apply consistent glitch text effect to footer headers
- Update contact info in index.html footer to be clickable (mailto/tel)
- Implement adaptive motion tiers for better performance on low-end devices
- Fix markdown artifacts in service page footers

--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="glitch-text" data-text="ApplyLogics">ApplyLogics</h3>
+                    <h3 class="glitch-text" data-text="ApplyLogics"><a href="index.html" style="text-decoration: none; color: inherit;">ApplyLogics</a></h3>
                     <p>Full-Service Technology Company</p>
                     <p>End-to-end digital solutions for businesses</p>
                     <div id="contact" style="margin-top: 24px;">
                         <h4>Contact</h4>
-                        <p>hello@applylogics.com</p>
-                        <p>352-325-1006</p>
+                        <p><a href="mailto:hello@applylogics.com" style="text-decoration: none; color: inherit;">hello@applylogics.com</a></p>
+                        <p><a href="tel:3523251006" style="text-decoration: none; color: inherit;">352-325-1006</a></p>
                     </div>
                     <div class="social-media">
                         <div class="social-icons">
@@ -306,7 +306,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2026 ApplyLogics Inc. All rights reserved.</p>
+                <p>© 2026 ApplyLogics Inc. All rights reserved. | <a href="terms.html" style="color: inherit; text-decoration: none; margin-left: 10px;">Terms of Service</a></p>
             </div>
         </div>
     </footer>
