--- a/digital-presence.html
+++ b/digital-presence.html
@@ -159,7 +159,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>ApplyLogics</h3>
+                    <h3 class="glitch-text" data-text="ApplyLogics"><a href="index.html" style="text-decoration: none; color: inherit;">ApplyLogics</a></h3>
                     <p>Full-Service Technology Company</p>
                     <p>End-to-end digital solutions for businesses</p>
                     <div class="social-media">
@@ -208,7 +208,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>© 2026 ApplyLogics Inc. All rights reserved.</p>
+                <p>© 2026 ApplyLogics Inc. All rights reserved. | <a href="terms.html" style="color: inherit; text-decoration: none; margin-left: 10px;">Terms of Service</a></p>
             </div>
         </div>
     </footer>
