--- a/terms.html
+++ b/terms.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="ApplyLogics provides expert technology consulting services including digital infrastructure, solution design, and technology planning for business growth.">
-    <title>Technology Consulting - ApplyLogics</title>
+        content="Terms of Service for ApplyLogics - Guidelines and rules for using our digital services and website.">
+    <title>Terms of Service - ApplyLogics</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -25,7 +25,6 @@
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">Menu</button>
             <div class="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
                 <a href="index.html#services" class="nav-link">Services</a>
                 <a href="index.html#solutions" class="nav-link">Solutions</a>
                 <a href="index.html#testimonials" class="nav-link">Testimonials</a>
@@ -40,21 +39,13 @@
             <div class="hero-content">
                 <div class="hero-badge">
                     <span class="hero-badge-dot"></span>
-                    Service
+                    Legal
                 </div>
-                <h1 class="hero-main-title">Technology Consulting</h1>
-                <h2 class="hero-subtitle">Strategic Guidance and Planning</h2>
+                <h1 class="hero-main-title">Terms of Service</h1>
+                <h2 class="hero-subtitle">Last Updated: January 2026</h2>
 
                 <div class="hero-description">
-                    <p>Expert advice on digital infrastructure, solution design, and technology planning for business
-                        growth. We help you make informed decisions about your technology investments.</p>
-                    <p>Our consulting services bridge the gap between your business goals and the technology needed to
-                        achieve them.</p>
-                </div>
-
-                <div class="hero-cta">
-                    <a href="contact.html" class="btn-primary">Schedule Consultation</a>
-                    <a href="index.html#services" class="btn-secondary">View All Services</a>
+                    <p>Please read these Terms of Service carefully before using our website or services. By accessing or using any part of the site, you agree to be bound by these terms.</p>
                 </div>
             </div>
         </div>
@@ -62,105 +53,39 @@
 
     <section class="value-props">
         <div class="container">
-            <h2 class="section-title">Our Consulting Services</h2>
-            <p class="section-subtitle">Strategic technology guidance for your business</p>
-
-            <div class="value-grid">
-                <div class="value-item">
-                    <div class="value-number">01</div>
-                    <h3>Technology Assessment</h3>
-                    <h4>Comprehensive tech stack evaluation</h4>
-                    <p>Thorough analysis of your current technology landscape to identify gaps, opportunities, and areas
-                        for improvement.</p>
+            <div class="terms-content" style="max-width: 800px; margin: 0 auto; color: var(--text-secondary);">
+                
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">1. Acceptance of Terms</h3>
+                    <p style="margin-bottom: 16px;">By accessing and using this website and the services provided by ApplyLogics ("we," "us," or "our"), you accept and agree to be bound by the terms and provision of this agreement. In addition, when using these particular services, you shall be subject to any posted guidelines or rules applicable to such services.</p>
                 </div>
 
-                <div class="value-item">
-                    <div class="value-number">02</div>
-                    <h3>Digital Strategy</h3>
-                    <h4>Roadmap for digital transformation</h4>
-                    <p>Strategic planning to align your technology investments with business objectives and long-term
-                        growth plans.</p>
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">2. Services Provided</h3>
+                    <p style="margin-bottom: 16px;">ApplyLogics provides technology consulting, web development, hosting, and automation services. We reserve the right to modify, suspend, or discontinue any aspect of our services at any time without notice.</p>
                 </div>
 
-                <div class="value-item">
-                    <div class="value-number">03</div>
-                    <h3>Solution Architecture</h3>
-                    <h4>Technical design and planning</h4>
-                    <p>Design of scalable, secure, and efficient technology solutions tailored to your specific business
-                        requirements.</p>
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">3. Intellectual Property</h3>
+                    <p style="margin-bottom: 16px;">The content, organization, graphics, design, compilation, magnetic translation, digital conversion and other matters related to the Site are protected under applicable copyrights, trademarks and other proprietary (including but not limited to intellectual property) rights. The copying, redistribution, use or publication by you of any such matters or any part of the Site is strictly prohibited.</p>
                 </div>
 
-                <div class="value-item">
-                    <div class="value-number">04</div>
-                    <h3>Vendor Selection</h3>
-                    <h4>Objective technology recommendations</h4>
-                    <p>Unbiased evaluation and recommendations for software, platforms, and technology vendors that best
-                        fit your needs.</p>
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">4. User Obligations</h3>
+                    <p style="margin-bottom: 16px;">You agree to use our site and services only for lawful purposes. You are prohibited from violating or attempting to violate the security of the Site, including, without limitation, accessing data not intended for you or logging onto a server or an account which you are not authorized to access.</p>
                 </div>
 
-                <div class="value-item">
-                    <div class="value-number">05</div>
-                    <h3>Security Consulting</h3>
-                    <h4>Risk assessment and security planning</h4>
-                    <p>Comprehensive security assessments and recommendations to protect your business data and systems.
-                    </p>
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">5. Limitation of Liability</h3>
+                    <p style="margin-bottom: 16px;">In no event shall ApplyLogics be liable for any direct, indirect, incidental, special, consequential damages, or damages for loss of profits, revenue, data or use, incurred by you or any third party, whether in an action in contract or tort, arising from your access to, or use of, the site or any services provided.</p>
                 </div>
 
-                <div class="value-item">
-                    <div class="value-number">06</div>
-                    <h3>Process Optimization</h3>
-                    <h4>Streamline business operations</h4>
-                    <p>Analysis and recommendations for improving business processes through better technology
-                        utilization.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="focus-section">
-        <div class="container">
-            <h2>Our Consulting Approach</h2>
-            <p class="focus-subtitle">Proven methodology for technology success</p>
-
-            <div class="focus-grid">
-                <div class="focus-item">
-                    <h3>Discovery</h3>
-                    <p>Deep dive into your business operations, goals, and current technology landscape to understand
-                        your unique challenges.</p>
+                <div class="terms-section" style="margin-bottom: 40px;">
+                    <h3 style="color: var(--text-primary); font-size: 24px; margin-bottom: 16px;">6. Contact Information</h3>
+                    <p style="margin-bottom: 16px;">If you have any questions about these Terms, please contact us at:</p>
+                    <p><a href="mailto:legal@applylogics.com" style="color: var(--accent-cyan); text-decoration: none;">legal@applylogics.com</a></p>
                 </div>
 
-                <div class="focus-item">
-                    <h3>Analysis</h3>
-                    <p>Comprehensive assessment of opportunities, risks, and potential solutions aligned with your
-                        business objectives.</p>
-                </div>
-
-                <div class="focus-item">
-                    <h3>Strategy</h3>
-                    <p>Development of actionable technology roadmaps with clear priorities, timelines, and expected
-                        outcomes.</p>
-                </div>
-
-                <div class="focus-item">
-                    <h3>Implementation Support</h3>
-                    <p>Ongoing guidance and support throughout the implementation process to ensure successful
-                        execution.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="partners-section">
-        <div class="container">
-            <h2>Ready to Transform Your Technology?</h2>
-            <div class="testimonial">
-                <p class="testimonial-text">Let our experts help you navigate the complex technology landscape and make
-                    strategic decisions that drive real business results. Schedule a consultation to discuss your
-                    technology challenges.</p>
-                <div class="testimonial-author">
-                    <strong>Contact us today</strong>
-                    <span class="author-title">hello@applylogics.com | 352-325-1006</span>
-                </div>
             </div>
         </div>
     </section>
@@ -189,11 +114,12 @@
                 </div>
 
                 <div class="footer-section">
-                    <h4>Other Services</h4>
+                    <h4>Services</h4>
                     <ul>
                         <li><a href="web-design-development.html">Web Design & Development</a></li>
                         <li><a href="hosting-server-setup.html">Hosting & Server Setup</a></li>
                         <li><a href="ai-business-automation.html">AI Business Automation</a></li>
+                        <li><a href="technology-consulting.html">Technology Consulting</a></li>
                         <li><a href="maintenance-support.html">Maintenance & Support</a></li>
                         <li><a href="custom-development.html">Custom Development</a></li>
                     </ul>
