Fix header/footer link consistency and mobile nav controls

--- a/src/content/pages/hosting-server-setup.html
+++ b/src/content/pages/hosting-server-setup.html
@@ -161,7 +161,7 @@
                                 rel="noopener noreferrer" aria-label="GitHub"></a>
                             <a href="https://facebook.com/applylogics" class="social-icon facebook" target="_blank"
                                 rel="noopener noreferrer" aria-label="Facebook"></a>
-                            <a href="https://dev.to/applylogics" class="social-icon devplusplus" target="_blank"
+                            <a href="https://dev.to" class="social-icon devplusplus" target="_blank"
                                 rel="noopener noreferrer" aria-label="Dev++"></a>
                             <a href="https://bsky.app/profile/applylogics" class="social-icon bluesky" target="_blank"
                                 rel="noopener noreferrer" aria-label="Bluesky"></a>
