--- a/src/content/pages/index.html
+++ b/src/content/pages/index.html
@@ -259,7 +259,7 @@
                         <div class="social-icons">
                             <a href="https://github.com/applylogics" class="social-icon github" target="_blank" rel="noopener noreferrer" aria-label="GitHub"></a>
                             <a href="https://facebook.com/applylogics" class="social-icon facebook" target="_blank" rel="noopener noreferrer" aria-label="Facebook"></a>
-                            <a href="https://dev.to/applylogics" class="social-icon devplusplus" target="_blank" rel="noopener noreferrer" aria-label="Dev++"></a>
+                            <a href="https://dev.to" class="social-icon devplusplus" target="_blank" rel="noopener noreferrer" aria-label="Dev++"></a>
                             <a href="https://bsky.app/profile/applylogics" class="social-icon bluesky" target="_blank" rel="noopener noreferrer" aria-label="Bluesky"></a>
                             <a href="https://x.com/applylogics" class="social-icon twitter" target="_blank" rel="noopener noreferrer" aria-label="X"></a>
                         </div>
