--- a/src/content/pages/maintenance-support.html
+++ b/src/content/pages/maintenance-support.html
@@ -11,12 +11,13 @@
                     <span class="logo-text glitch-text" data-text="ApplyLogics">ApplyLogics</span>
                 </a>
             </div>
+            <button class="mobile-menu-btn" aria-label="Toggle menu">Menu</button>
             <div class="nav-menu">
                 <a href="index.html" class="nav-link">home</a>
                 <a href="index.html#services" class="nav-link">services</a>
                 <a href="index.html#solutions" class="nav-link">solutions</a>
                 <a href="index.html#testimonials" class="nav-link">testimonials</a>
-                <a href="index.html#about" class="nav-link">about</a>
+                <a href="about.html" class="nav-link">about</a>
                 <a href="contact.html" class="nav-link">contact</a>
             </div>
         </div>
@@ -204,7 +205,7 @@
                                 rel="noopener noreferrer" aria-label="GitHub"></a>
                             <a href="https://facebook.com/applylogics" class="social-icon facebook" target="_blank"
                                 rel="noopener noreferrer" aria-label="Facebook"></a>
-                            <a href="https://dev.to/applylogics" class="social-icon devplusplus" target="_blank"
+                            <a href="https://dev.to" class="social-icon devplusplus" target="_blank"
                                 rel="noopener noreferrer" aria-label="Dev++"></a>
                             <a href="https://bsky.app/profile/applylogics" class="social-icon bluesky" target="_blank"
                                 rel="noopener noreferrer" aria-label="Bluesky"></a>
